syntax = "proto3";

package conversation;

service ConversationService {
  rpc CreateConversation (CreateConversationRequest) returns (CreateConversationResponse);
  rpc GetParticipants (GetParticipantsRequest) returns (GetParticipantsResponse);
  rpc GetUserConversations (GetUserConversationsRequest) returns (GetUserConversationsResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
}

message CreateConversationRequest {
  repeated string participants = 1;
  string type = 2;
}

message CreateConversationResponse {
  int32 conversationId = 1;
  string error = 2;
}

message GetParticipantsRequest {
  int32 conversationId = 1;
}

message GetParticipantsResponse {
  repeated string participants = 1;
  string error = 2;
}

message GetUserConversationsRequest {
  string username = 1;
}

message GetUserConversationsResponse {
  repeated Conversation conversations = 1;
  string error = 2;
}

message Conversation {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string created_at = 4;
}

message GetMessagesRequest {
  int32 conversationId = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  string error = 2;
}

message Message {
  int32 id = 1;
  int32 conversation_id = 2;
  string sender_username = 3;
  string content = 4;
  string type = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}
